# enterprise-rag-eval

./: .gitignore  pyproject.toml
enterprise-rag-eval/: LICENSE  README.md  requirements.txt  setup.py
enterprise-rag-eval/configs/: default.yaml
enterprise-rag-eval/docs/: architecture.md  methodology.md  metrics.md
enterprise-rag-eval/examples/: run_eval.py  sample_dataset.json
enterprise-rag-eval/notebooks/: evaluation_demo.ipynb
enterprise-rag-eval/rag_eval/: __init__.py  judge.py  metrics.py  pipeline.py  prompts.py  schemas.py  utils.py
enterprise-rag-eval/tests/: test_pipeline.py
