[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "enterprise-rag-eval"
version = "0.1.0"
description = "Case-aware evaluation framework for enterprise RAG systems using LLM-as-a-judge methodology."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Mukul Chhabra"}]
dependencies = [
  "pandas>=2.0.0",
  "numpy>=1.24.0",
  "pyyaml>=6.0.0",
  "tqdm>=4.66.0",
  "pydantic>=2.0.0",
  "openai>=1.0.0"
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
